RASS-1366: Update wording and improve design consistency in sentencing and offence pages

--- a/server/views/pages/offence/offence-conviction-date.njk
+++ b/server/views/pages/offence/offence-conviction-date.njk
@@ -44,7 +44,7 @@
                 }) }}
 
                 {{ govukButton({
-                    text: "Save and continue",
+                    text: "Continue",
                     attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
