--- a/server/views/pages/offence/update-offence-outcomes.njk
+++ b/server/views/pages/offence/update-offence-outcomes.njk
@@ -88,7 +88,7 @@
         }}
         {% else %}
             {{ govukInsetText({
-                        text: "There are no offences that need updating."
+                        text: "There are no offences with outcomes that need updating."
                     }) }}
         {% endfor %}
     </span>
@@ -197,7 +197,7 @@
                         items: [
                             {
                                 value: "true",
-                                text: "Yes, I've finished reviewing offences"
+                                text: "Yes, I've finished"
                             },
                             {
                                 value: "false",
