RASS-1369 add search bar to documents page (#1070)
* RASS-1369 add search bar to documents page

* clean up

* clean up

* test

* test

--- a/server/views/pages/documents.njk
+++ b/server/views/pages/documents.njk
@@ -1,6 +1,9 @@
 {% extends "../partials/prisonerBannerLayout.njk" %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "hmpps/components/court-cases-release-dates/things-to-do/macro.njk" import thingsToDo %}
+{% from "govuk/components/input/macro.njk" import govukInput %}
+{% from "govuk/components/button/macro.njk" import govukButton %}
+
 
 {% set pageTitle = applicationName + " - Documents" %}
 
@@ -10,22 +13,47 @@
     {{ thingsToDo(serviceDefinitions, 'courtCases') }}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
+        <form method="get" autocomplete="off">
+                {{ govukInput({
+                    label: {
+                        text: "Search" ,
+                        classes: "govuk-!-font-weight-bold"   
+                    },
+                    id: "searchQuery",
+                    name: "searchQuery",
+                    value: searchQuery
+                }) }}
+
+                <div class="govuk-button-group">
+                    {{ govukButton({
+                        text: "Search",
+                        attributes: {  'data-qa': 'continue-button' }
+                    }) }}
+                    {% if searchQuery %}
+                        <a class="govuk-link govuk-link--no-visited-state" href="/person/{{ nomsId }}/documents">Clear</a>
+                    {% endif %}
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="govuk-grid-row">
+            
+        <div class="govuk-grid-column-two-thirds">
+
             {% for courtCase in courtCases %}
                 <h2 class="govuk-heading-l">{% if courtCase.latestAppearance.courtCaseReference %}{{ courtCase.latestAppearance.courtCaseReference }} {% endif %} at {{ courtMap[courtCase.latestAppearance.courtCode] }} </h2>
-
                 {% for documentType, documents in courtCase.appearanceDocumentsByType %}
                     <h3 class="govuk-heading-m"> {{ documentType }}</h3>
                     {% set summaryListRows = [] %}
                     {% for document in documents %}
                         {% set documentKeyHtml %}
-                            <a class="govuk-link govuk-link--no-visited-state" href="/api/document/{{document.documentUUID}}/download">{{ document.fileName }}</a> on {{ document.warrantDate | formatDate }} at {{ courtMap[document.courtCode] }}
+                            <span data-qa="document-details-{{document.documentUUID}}">
+                                <a class="govuk-link govuk-link--no-visited-state" href="/api/document/{{document.documentUUID}}/download">{{ document.fileName }}</a> on {{ document.warrantDate | formatDate }} at {{ courtMap[document.courtCode] }}
+                            </span>
                         {% endset %}
                         {% set summaryListRows = summaryListRows.concat({
                             key: {
                                 html: documentKeyHtml
-                            }, 
-                            value: {
-                                text: ''
                             }
                         })%}
                     {% endfor %}
