RASS-1369 fix tab selection

--- a/server/views/pages/documents.njk
+++ b/server/views/pages/documents.njk
@@ -10,7 +10,7 @@
 {% block content %}
     <h1 class="govuk-heading-xl">Court cases documents</h1>
     
-    {{ thingsToDo(serviceDefinitions, 'courtCases') }}
+    {{ thingsToDo(serviceDefinitions, 'documents') }}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
         <form method="get" autocomplete="off">
