RASS-1369 fix tab selection

--- a/server/views/pages/documents.njk
+++ b/server/views/pages/documents.njk
@@ -6,6 +6,7 @@
 
 
 {% set pageTitle = applicationName + " - Documents" %}
+{% set subNavigationService = 'documents'%}
 
 {% block content %}
     <h1 class="govuk-heading-xl">Court cases documents</h1>
