RASS-1353 content update

--- a/server/views/pages/courtAppearance/upload-court-documents.njk
+++ b/server/views/pages/courtAppearance/upload-court-documents.njk
@@ -44,7 +44,7 @@
                   items: [
                     {
                       href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/" + documentRow.documentUUID + "/delete-document",
-                      text: "Remove",
+                      text: "Delete",
                       visuallyHiddenText: "document",
                       attributes: {
                         'data-qa': 'remove-' + documentRow.type + '-document-link'
