--- a/server/views/pages/sentencing/upload-court-documents.njk
+++ b/server/views/pages/sentencing/upload-court-documents.njk
@@ -41,7 +41,7 @@
                   items: [
                     {
                       href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/" + documentRow.documentUUID + "/delete-document",
-                      text: "Remove",
+                      text: "Delete",
                       visuallyHiddenText: "document"
                     }
                   ]
