--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -232,7 +232,7 @@
                           }) %}
                         {% elif courtCaseDetails.warrantType !== 'SENTENCING' %}
                           {% set _ = actions.push({
-                            href: "/person/" + nomsId + "/edit-court-case/" + courtCaseDetails.courtCaseUuid + "/add-court-appearance/" + appearanceUuid + "/new-journey",
+                            href: "/person/" + nomsId + "/edit-court-case/" + courtCaseDetails.courtCaseUuid + "/add-court-appearance/" + courtCaseDetails.newAppearanceUuid + "/new-journey",
                             text: "Add appearance",
                             visuallyHiddenText: "Add appearance",
                             attributes: {
