--- a/server/views/pages/overallSentencing/check-overall-answers.njk
+++ b/server/views/pages/overallSentencing/check-overall-answers.njk
@@ -5,154 +5,149 @@
 {% set pageTitle = applicationName + " - Check your answers" %}
 {% set hideOffences = true %}
 {% set isAddOffences = true %}
-{% set summaryRows = [
-    {
-        key: {
-        text: "Is there an overall sentence length on the warrant?"
-    },
-        value: {
-        text: "Yes" if courtAppearance.hasOverallSentenceLength === 'true' else 'No'
-    },
-        actions: {
-        items: [
-            {
-                href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/sentencing/overall-sentence-length?submitToCheckAnswers=true",
-                text: "Edit",
-                visuallyHiddenText: "is there an overall sentence length on the warrant"
-            }
-        ]
-    }
-    },
-    {
-        key: {
-        text: "Overall sentence length"
-    },
-        value: {
-        text: courtAppearance.overallSentenceLength | formatLengths if courtAppearance.overallSentenceLength else 'Not entered'
-    },
-        actions: {
-        items: [
-            {
-                href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/sentencing/overall-sentence-length?submitToCheckAnswers=true",
-                text: "Edit",
-                visuallyHiddenText: "overall sentence length"
-            }
-        ]
-    }
-    },
-    {
-        key: {
-        text: "Is the conviction date the same for all offences on the warrant?"
-    },
-        value: {
-        text: "Yes" if courtAppearance.overallConvictionDateAppliedAll === 'true' else 'No'
-    },
-        actions: {
-        items: [
-            {
-                href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/sentencing/overall-conviction-date?submitToCheckAnswers=true",
-                text: "Edit",
-                visuallyHiddenText: "conviction date the same for all offences on the warrant"
-            }
-        ] if courtAppearance.warrantInformationAccepted !== true
-    }
-    }] %}
 
-    {% if courtAppearance.overallConvictionDate %}
-        {% set summaryRows = summaryRows.concat([{
-            key: {
-            text: "Conviction date"
-        },
-            value: {
-            text: courtAppearance.overallConvictionDate | formatDate if courtAppearance.overallConvictionDate else 'Not entered'
-        },
-            actions: {
-            items: [
-                {
-                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/sentencing/overall-conviction-date?submitToCheckAnswers=true",
-                    text: "Edit",
-                    visuallyHiddenText: "conviction date"
-                }
-            ] if courtAppearance.warrantInformationAccepted !== true
+{% set summaryRows = [
+  {
+    key: {
+      text: "Is there an overall sentence length on the warrant?"
+    },
+    value: {
+      text: "Yes" if courtAppearance.hasOverallSentenceLength === 'true' else 'No'
+    },
+    actions: {
+      items: [
+        {
+          href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/sentencing/overall-sentence-length?submitToCheckAnswers=true",
+          text: "Edit",
+          visuallyHiddenText: "is there an overall sentence length on the warrant",
+          classes: "govuk-link--no-visited-state"
         }
-        }]) %}
-    {% endif %}
+      ]
+    }
+  },
+  {
+    key: {
+      text: "Overall sentence length"
+    },
+    value: {
+      text: courtAppearance.overallSentenceLength | formatLengths if courtAppearance.overallSentenceLength else 'Not entered'
+    },
+    actions: {
+      items: [
+        {
+          href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/sentencing/overall-sentence-length?submitToCheckAnswers=true",
+          text: "Edit",
+          visuallyHiddenText: "overall sentence length",
+          classes: "govuk-link--no-visited-state"
+        }
+      ]
+    }
+  },
+  {
+    key: {
+      text: "Is the conviction date the same for all offences on the warrant?"
+    },
+    value: {
+      text: "Yes" if courtAppearance.overallConvictionDateAppliedAll === 'true' else 'No'
+    },
+    actions: {
+      items: [
+        {
+          href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/sentencing/overall-conviction-date?submitToCheckAnswers=true",
+          text: "Edit",
+          visuallyHiddenText: "conviction date the same for all offences on the warrant",
+          classes: "govuk-link--no-visited-state"
+        }
+      ] if courtAppearance.warrantInformationAccepted !== true
+    }
+  }
+] %}
+
+{% if courtAppearance.overallConvictionDate %}
+  {% set summaryRows = summaryRows.concat([{
+    key: { text: "Conviction date" },
+    value: {
+      text: courtAppearance.overallConvictionDate | formatDate if courtAppearance.overallConvictionDate else 'Not entered'
+    },
+    actions: {
+      items: [
+        {
+          href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/sentencing/overall-conviction-date?submitToCheckAnswers=true",
+          text: "Edit",
+          visuallyHiddenText: "conviction date",
+          classes: "govuk-link--no-visited-state"
+        }
+      ] if courtAppearance.warrantInformationAccepted !== true
+    }
+  }]) %}
+{% endif %}
 
 {% set summaryRows = summaryRows.concat([
+  {
+    key: { text: "Overall case outcome" },
+    value: { text: overallCaseOutcome },
+    actions: {
+      items: [
         {
-            key: {
-            text: "Overall case outcome"
-        },
-            value: {
-            text: overallCaseOutcome
-        },
-            actions: {
-            items: [
-                {
-                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/sentencing/overall-case-outcome?submitToCheckAnswers=true",
-                    text: "Edit",
-                    visuallyHiddenText: "overall case outcome"
-                }
-            ]
+          href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/sentencing/overall-case-outcome?submitToCheckAnswers=true",
+          text: "Edit",
+          visuallyHiddenText: "overall case outcome",
+          classes: "govuk-link--no-visited-state"
         }
-        }
-    ]) %}
-
-
-    
-
+      ]
+    }
+  }
+]) %}
 
 {% if isAddJourney %}
-    {% set summaryRows = summaryRows.concat([
-        {
-            key: {
-            text: "Is the outcome the same for all offences on the warrant?"
-        },
-            value: {
-            text: "Yes" if courtAppearance.caseOutcomeAppliedAll === 'true' else 'No'
-        },
-            actions: {
-            items: [
-                {
-                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/sentencing/case-outcome-applied-all?submitToCheckAnswers=true",
-                    text: "Edit",
-                    visuallyHiddenText: "is the outcome the same for all offences on the warrant"
-                }
-            ] if courtAppearance.warrantInformationAccepted !== true
-        }
-        }
-    ]) %}
+  {% set summaryRows = summaryRows.concat([
+    {
+      key: { text: "Is the outcome the same for all offences on the warrant?" },
+      value: {
+        text: "Yes" if courtAppearance.caseOutcomeAppliedAll === 'true' else 'No'
+      },
+      actions: {
+        items: [
+          {
+            href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/sentencing/case-outcome-applied-all?submitToCheckAnswers=true",
+            text: "Edit",
+            visuallyHiddenText: "is the outcome the same for all offences on the warrant",
+            classes: "govuk-link--no-visited-state"
+          }
+        ] if courtAppearance.warrantInformationAccepted !== true
+      }
+    }
+  ]) %}
 {% endif %}
 
 {% block pageContent %}
-    {% include "../../partials/overallWarrantInformationCaption.njk" %}
+  {% include "../../partials/overallWarrantInformationCaption.njk" %}
 
-    <h1 class="govuk-heading-l">
-        Check your answers
-    </h1>
+  <h1 class="govuk-heading-l">
+    Check your answers
+  </h1>
 
-    {{ govukSummaryList({
-        rows: summaryRows,
-        attributes: {
-            "data-qa": "check-overall-answers-summary-list"
-        }
-    }) }}
+  {{ govukSummaryList({
+    rows: summaryRows,
+    attributes: {
+      "data-qa": "check-overall-answers-summary-list"
+    }
+  }) }}
 
+  <div class="govuk-button-group govuk-!-margin-top-8">
+    <form method="post" autocomplete="off">
+      <input type="hidden" name="_csrf" value="{{ csrfToken }}">
 
-    <div class="govuk-button-group govuk-!-margin-top-8">
-        <form method="post" autocomplete="off">
-            <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-
-            <div class="govuk-button-group">
-                <button type="submit"
-                        class="govuk-button"
-                        data-module="govuk-button"
-                        data-qa="confirm-and-continue"
-                        formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/submit-check-overall-answers">
-                    Confirm and continue
-                </button>
-            </div>
-        </form>
-    </div>
-
+      <div class="govuk-button-group">
+        <button
+          type="submit"
+          class="govuk-button"
+          data-module="govuk-button"
+          data-qa="confirm-and-continue"
+          formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/submit-check-overall-answers">
+          Confirm and continue
+        </button>
+      </div>
+    </form>
+  </div>
 {% endblock %}
