RASS-1368: Update legend styling for consistency on overall sentencing pages

--- a/server/views/pages/overallSentencing/overall-conviction-date.njk
+++ b/server/views/pages/overallSentencing/overall-conviction-date.njk
@@ -14,7 +14,7 @@
         fieldset: {
             legend: {
                 text: "Enter the conviction date",
-                classes: "govuk-fieldset__legend--m"
+                classes: "govuk-label govuk-!-font-weight-bold"
             }
         },
         items: [
@@ -60,7 +60,7 @@
                         }
                     },
                     hint: {
-                        html: govukInsetText({ 
+                        html: govukInsetText({
                                 text: "This is not always the same as the sentencing date. You can find the conviction date on the Prison court register.",
                                 classes: "govuk-!-margin-top-3",
                                 attributes: {  'data-qa': 'hintInset' }
