--- a/server/views/pages/overallSentencing/overall-sentence-length.njk
+++ b/server/views/pages/overallSentencing/overall-sentence-length.njk
@@ -11,7 +11,7 @@
         fieldset: {
             legend: {
                 text: "Enter the overall sentence length",
-                classes: "govuk-fieldset__legend--m"
+                classes: "govuk-label govuk-!-font-weight-bold"
             }
         },
         items: [{
