RASS-1367: Improve margin consistency across sentencing and offence pages

--- a/server/views/pages/offence/period-length.njk
+++ b/server/views/pages/offence/period-length.njk
@@ -49,7 +49,7 @@
                     ]
                 }) }}
 
-                <p class="govuk-body">
+                <p class="govuk-body govuk-!-margin-bottom-6">
                     <a href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ chargeUuid }}/alternative-period-length{{ submitQuery }}" class="govuk-link govuk-link--no-visited-state">The {{ periodLengthHeader }} is formatted differently</a>
                 </p>
 
