--- a/server/views/pages/offence/update-outcome.njk
+++ b/server/views/pages/offence/update-outcome.njk
@@ -9,7 +9,7 @@
         <span class="govuk-caption-l">Update offence outcomes</span>
         What is the new outcome for this offence?
     </h1>
-    <p class="govuk-body-l" data-qa="offenceParagraph">{{ offence.offenceCode }} - {{ offenceDetails.description }} committed on {{ offence.offenceStartDate | formatDate }}{{" to " + offence.offenceEndDate | formatDate if offence.offenceEndDate }}</p>
+    <p class="govuk-body-l govuk-!-margin-top-3" data-qa="offenceParagraph">{{ offence.offenceCode }} - {{ offenceDetails.description }} committed on {{ offence.offenceStartDate | formatDate }}{{" to " + offence.offenceEndDate | formatDate if offence.offenceEndDate }}</p>
 {% endset %}
 
 {% set radiosData = {
