--- a/server/views/pages/overallSentencing/overall-sentence-length.njk
+++ b/server/views/pages/overallSentencing/overall-sentence-length.njk
@@ -39,7 +39,7 @@
                 value: overallSentenceLengthForm["sentenceLength-days"]
             }]
     }) }}
-    <p class="govuk-body govuk-!-margin-top-4">
+    <p class="govuk-body govuk-!-margin-top-4 govuk-!-margin-bottom-6             ">
         <a href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/alternative-overall-sentence-length{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}" class="govuk-link govuk-link--no-visited-state">The
             sentence length is formatted differently</a>
     </p>
